--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,8 @@
             <img src="{{ url_for('static' ,filename='img/1.jpg')}}" alt="Imagem de diversos eletrodomésticos.">
             </div>
 
+            <a href="/cep"> Busque seu CEP. </a>
+
         </section>
 
     </body>
