palavra resultado estava errada

--- a/templates/new.html
+++ b/templates/new.html
@@ -25,7 +25,7 @@
                 2. Informe o consumo registrado em seu medidor. <br>
                 3. Informe o tempo que durou a medição. <br>
                 4. Clique em cadastrar.<br>
-                5. Clique em comparar.<br>
+                5. Clique em resultado.<br>
         </section>
 
 
