--- a/templates/cep.html
+++ b/templates/cep.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Oswald|Oxanium|Poppins|Sen&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="" href="css/app.css">
+    <link rel="stylesheet" type="" href=" {{ url_for('static', filename='css/app.css') }}">
 
     <title>Busca CEP</title>
 </head>
@@ -68,7 +68,7 @@
            
     //console.log(micael(10,10,20))
     </script>
-    <script src="js/app.js"></script>
+    <script src="./../static/js/app.js"></script>
        
 </body>
 </html>
