--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
             <img src="{{ url_for('static' ,filename='img/1.jpg')}}" alt="Imagem de diversos eletrodomésticos.">
             </div>
 
-            <a href="/cep"> Busque seu CEP. </a>
+            <a target="_blank" href="/cep"> Busque seu CEP. </a>
 
         </section>
 
